fixed swagger problems
